# nomad.ai.agent

./: .gitignore  README.md
Day10/papa/: README.md  agent.py  app.py  pyproject.toml  tools.py
Day14/papa/: README.md  agent.py  app.py  pyproject.toml  setup_vector_store.py  tools.py
Day14/papa/data/: goal.txt  my_goals.md
Day16/papa/: data.py  menu_agent.py  order_agent.py  pyproject.toml  reservation_agent.py  tools.py  triage_agent.py
Day17/papa/: README.md  app.py  complaints_agent.py  data.py  guardrails.py  models.py  tools.py  triage_agent.py
Day2/: AI 🦾 엔지니어 클럽 – 노마드 코더 Nomad Coders.mhtml
Day2/papa/: assignment.ipynb  classnote.txt  main.ipynb  main.py  pyproject.toml
Day3/papa/: assignment.ipynb  main.ipynb
Day7/papa/: assignment.ipynb
Day9/papa/: agent.py  app.py  pyproject.toml  tools.py
